# Head

- Fixed a bug where a nested sum would return 0 rather than an error in C code
- Implementing the HLOOKUP function
- When running in memory mode, now allows old intermediate files to be garbage collected, reducing memory use

# 0.1.10

- Now replaces INDIRECT() functions that have a second argument (but note, excel_to_code only supports A1 refs, not R1C1).
- Now repeats its passes to replace formulae with values until there is no more to be done
- Partially implemented the TEXT() function (for '0%' format only at this stage)
- Can now replace INDIRECT() functions where they argument is an error
- Inlining now copes with references to missing worksheets
- Implement the PV() function in ruby and C
- Implemented TRIM(), MID() and partially implemented CELL() in ruby
- The negative prefix can now operate on ranges
- Now attempts to simplify COLUMN() functions out of the spreadsheet at compile time (the function is not supported at runtime)
- Fix bug in the treatment of array results when simplifying INDEX functions
- Fixed a bug in replacing some table references with their values
- Now attempts to simplify OFFSET() functions out of the spreadsheet at compile time (the function is NOT supported at runtime)
- COUNT() functions are now replaced with their values if possible at compile time
- New option for cells_that_can_be_set_at_runtime = :named_references_only that only creates settable values for references that have been set in named_references_that_can_be_set_at_runtime.
- Fixed a bug in array formulae expansion: now copes with functions that have a variable number of arguments

# 0.1.9

- Removed chartsheets from the list of worksheets

# 0.1.8

- Remove newlines from excel formulae. This may turn out to be a bad idea (newlines in strings in formulae?) but needed for now.
- Implemented the LARGE(array,k) excel function in C and in Ruby

# 0.1.7

- Implemented the INT(number) excel function in C and in Ruby.

# 0.1.6
