@@ -55,7 +55,7 @@ class ExampleSpreadsheet
   def ranges_c3; @ranges_c3 ||= sum([[valuetypes_a1],[valuetypes_a2],[valuetypes_a3],[valuetypes_a4],[valuetypes_a5],[valuetypes_a6]]); end
   def ranges_a4; @ranges_a4 ||= "Row"; end
   def ranges_b4; @ranges_b4 ||= sum([[nil,nil,nil,nil,ranges_e5,ranges_f5,ranges_g5]]); end
-  def ranges_c4; @ranges_c4 ||= sum([[valuetypes_a4]]); end
+  def ranges_c4; @ranges_c4 ||= sum(valuetypes_a4); end
   attr_accessor :ranges_f4 # Default: 1
   attr_accessor :ranges_e5 # Default: 1
   attr_accessor :ranges_f5 # Default: 2
